[package]
name = "hello-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "sort"
path = "src/sort.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[dependencies]
